--- a/addchange_items.css
+++ b/addchange_items.css
@@ -14,16 +14,76 @@
 }
 
 body {
-	background-color: var(--primary);
+	background-color: var(--sbg);
 	color: black;
 }
 
 .container {
 	background-color: var(--bg);
 	width: 70%;
+	height: 727px;
 	margin: 0 auto;
 	padding: 0 30px;
 	padding-bottom: 30px;
+}
+
+.head header {
+	display: flex;
+	justify-content: space-between;
+	padding: 10px;
+}
+
+.head {
+	background-color: var(--bg);
+}
+
+header .left-session {
+	width: 30%;
+	text-align: center;
+}
+
+header .left-session h1::before {
+	content: '';
+	border-bottom: 1px solid black;
+	padding-bottom: 3px;
+	transform: scaleX(0.5);
+}
+
+header .right-session {
+	display: flex;
+	justify-content: space-around;
+	width: 20%;
+}
+
+.right-session .sapa {
+	width: 70%;
+	display: flex;
+	align-items: center;
+}
+
+.sapa p {
+	text-align: center;
+	font-size: 20px;
+}
+
+.right-session .exit {
+	display: flex;
+	align-items: center;
+}
+
+.exit a img {
+	width: 25px;
+	height: 25px;
+}
+
+.form {
+	margin: 20px 5px;
+}
+
+.form form {
+	display: flex;
+	justify-content: space-around;
+	text-align: center;
 }
 
 header {
