--- a/halamanuser/halaman_produk.css
+++ b/halamanuser/halaman_produk.css
@@ -1,10 +1,10 @@
 :root {
-	--primary: #21130d;
-	--bg: #fbfcfa;
+	--primary: #000000;
+	--bg: #ffffff;
 }
 
 * {
-	font-family: 'Oswald', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
@@ -21,7 +21,7 @@ body {
 
 .navigasi {
 	width: 100%;
-	height: 50px;
+	height: 70px;
 	background-color: var(--primary);
 	display: flex;
 	justify-content: space-between;
@@ -32,38 +32,45 @@ body {
 	left: 0;
 	right: 0;
 	z-index: 99;
-	/*
-	box-shadow: -1px 1px 1px 0px rgba(0,0,0,0.8);
-	-webkit-box-shadow: -1px 3px 6px 0px rgba(0,0,0,0.8);
-	-moz-box-shadow: -1px 3px 6px 0px rgba(0,0,0,0.8);
-	*/
+	box-shadow: -1px 1px 1px 0px rgba(0,0,0,0.5);
+	-webkit-box-shadow: -1px 3px 6px 0px rgba(0,0,0,0.5);
+	-moz-box-shadow: -1px 3px 6px 0px rgba(0,0,0,0.5);
+	
 }
 
 .navigasi .nav-kiri {
 	background-color: var(--primary);
 	width: 250px;
-	height: 36px;
+	height: 70px;
 	font-size: 20px;
+	display: flex; /* Gunakan flexbox */
+    align-items: center; /* Align vertikal ke tengah */
+    gap: 3px; /* Beri jarak antara gambar dan teks */
 }
 
 .nav-kiri img {
 	width: 50px;
 	height: 50px;
 	float: left;
-	color: white;
+	object-fit: contain; /* Pastikan gambar tidak terdistorsi */
+    vertical-align: middle; /* Opsional, hanya untuk keamanan */
 }
 
 .navigasi .nav-kiri p {
-	font-style: oblique;
 	color: var(--bg);
+	font-size: 24px;
+	font-family: 'Poppins', sans-serif; /* Menggunakan font Poppins */
+    font-weight: 600; /* Semibold */
+	font-style: italic;
 }
 
 .navigasi .nav-kanan {
 	width: 500px;
-	height: 36px;
+	height: 70px;
 	background-color: var(--primary);
 	display: flex;
 	justify-content: flex-end;
+	align-items: center;
 }
 
 .navigasi .nav-kanan a {
@@ -71,19 +78,22 @@ body {
 	font-size: 18px;
 	margin: 0 16px;
 	color: var(--bg);
+	font-family: 'Poppins', sans-serif; /* Menggunakan font Poppins */
+    font-weight: 500;
 }
 
 .container-etalase {
-	margin-top: 50px;
-	background-color: #321f16;
+	margin-top: 70px;
+	height: 100px;
+	background-color:var(--primary);
 }
 
 .container-etalase .menu-etalase {
 	display: flex;
 	justify-content: space-between;
-	background-color: #321f16;
+	background-color: var(--primary);
 	color: white;
-	padding: 0 100px;
+	padding: 10px 100px;
 	align-items: center;
 }
 
@@ -94,29 +104,34 @@ body {
 .container-etalase .menu-etalase .find-product input {
 	height: 30px;
 	padding-left: 10px;
+	border-radius: 25px 0 0 25px;
 }
 
 .container-etalase .menu-etalase .find-product button {
 	height: 30px;
 	padding: 0 10px;
+	border-radius: 0 25px 25px 0;
 }
 
 .container-etalase .list-merek {
 	display: flex;
 	justify-content: center;
-	background: #4e3327;
+	align-items: end;
+	background: var(--primary);
+	margin-top: 10px;
+	font-family: 'Poppins', sans-serif; /* Menggunakan font Poppins */
 }
 
 .container-etalase .list-merek a {
 	text-decoration: none;
 	padding: 0 10px;
 	color: white;
-	font-size: 26px;
+	font-size: 20px;
 }
 
 .container-etalase .list-merek a.active {
 	background-color: var(--primary);
-	color: rgb(203, 203, 203);
+	color: rgb(153, 151, 151);
 }
 
 .cards {
@@ -133,6 +148,7 @@ body {
 	box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 	position: relative;
 	padding-bottom: 70px;
+	border-radius: 20px;
 }
 
 .card img {
@@ -154,7 +170,7 @@ body {
 .order-icon {
 	display: flex;
 	justify-content: center;
-	margin-top: 20px;
+	margin-top: 5px;
 }
 
 .order-icon a {
@@ -178,15 +194,23 @@ body {
 	text-decoration: none;
 }
 
+.spek-product {
+	list-style: none;
+}
+
+.spek-product li {
+	padding-top: 3px;
+}
+
 div.pesan {
 	width: 50%;
 	background-color: limegreen;
 	height: 30px;
-	border-radius: 0px 30px 30px 0px;
+	border-radius: 25px;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	padding: 10px;
+	margin: 0 auto;
 }
 
 .pesan p {
