--- a/login.css
+++ b/login.css
@@ -14,7 +14,9 @@
 }
 
 body {
-	background-image: linear-gradient(to bottom, rgba(10, 10, 252, 0.42), rgba(117, 19, 93, 0.73)), url('img/login-bg.jpg');
+	background-image: 
+		/* linear-gradient(to bottom, rgba(7, 7, 7, 0.42), rgba(122, 121, 122, 0.73)),  */
+		url('img/bg_login2.png');
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
@@ -75,6 +77,7 @@ body {
 	border: 1px solid black;
 	margin-bottom: 15px;
 	display: flex;
+	border-radius: 0 20px 20px 0;
 }
 
 .input-group label {
@@ -114,7 +117,7 @@ button {
 	width: 90%;
 	height: 30px;
 	font-size: 20px;
-	border-radius: 0px;
+	border-radius: 20px;
 	outline: transparent;
 	border: 0px;
 	margin: auto;
